Perkin-UAT/force-app/main/default/objects/CSET_9900__c/CSET_9900__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to save some standard values.</description>
    <label>C.SET_9900</label>
</CustomObject>