Perkin-UAT/force-app/main/default/objects/CSET_9900__c/fields/Days_to_Freeze_Inactive_Users__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Freeze_Inactive_Users__c</fullName>
    <defaultValue>30</defaultValue>
    <description>This holds the number of days the users can be inactive before they freeze.</description>
    <label>Days to Freeze Inactive Users</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>