Perkin-UAT/force-app/main/default/objects/CSET_9900__c/fields/FLD_Dep_OPP_Related_Market_Analytics__c.field-meta.xml
<CustomField>
    <fullName>FLD_Dep_OPP_Related_Market_Analytics__c</fullName>
    <description>This is used within V.RULE_OPP_027, Opp.INF_Analytics_AVC &amp; P.FLOW_2000 to determine cut over the date when the Related_Market_Analytics field is no longer used. (RITM0097554)</description>
    <inlineHelpText>This is used within V.RULE_OPP_027, Opp.INF_Analytics_AVC &amp; P.FLOW_2000 to determine cut over the date when the Related_Market_Analytics field is no longer used. (RITM0097554)</inlineHelpText>
    <label>FLD_Dep_OPP_Related_Market_Analytics</label>
    <type>Date</type>
</CustomField>