Perkin-UAT/force-app/main/default/objects/CSET_9900__c/fields/OppCutoverDate__c.field-meta.xml
<CustomField>
    <fullName>OppCutoverDate__c</fullName>
    <description>Opps created before this date are exempt from newer V.RULEs. This will be coded into the V.RULE to reference this date</description>
    <inlineHelpText>Opps created before this date are exempt from newer V.RULEs. This will be coded into the V.RULE to reference this date</inlineHelpText>
    <label>OppCutoverDate</label>
    <type>Date</type>
</CustomField>